2019-03-26  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, etc/main, etc/main.ja: Updated.

	* ui_font_manager.c:
	  - The default value of min_font_size is changed from 6 to 1.
	  - The default value of max_font_size is changed from 30 to 100.

	* vt_pty_mosh.cpp: If select() in watch_ptys() fails, loop continues.

	* ui_event_source.c: Whether errno of select() is EINTR is checked.

	* ui_event_source-cocoa.m: Whether errno of select() is EAGAIN or EINTR
	  is checked.

2019-03-25  Araki Ken  <arakiken@users.sf.net>

	* README.android, README.sdl2, doc/en/README.ssh, doc/ja/README.ssh,
	  README.ja, etc/main, etc/main.ja, man/mlterm.1: Updated.

	* beos.cpp, sdl2/ui_display.c: Drag&Drop is supported.

	* cocoa.m: Command+Drag&Drop starts scp.

	* wayland/ui.h, wayland/ui_display.c: Shift+Drag&Drop start scp.

	* encodefilter/configure.in, encodefilter/module/Makefile.in:
	  ef_jis_property.lo is forcibly linked to libmef_jajp.so

	* bl_conf_io.c, im_iiimf_aux.c, daemon.c, vt_termcap.c: The return value
	  of bl_file_get_line() is regarded as NULL-terminated string.

	* bl_file.[ch]: bl_file_get_line() returns NULL-terminated string.

	* libctl/vt_iscii.c: ISCII tables except hindi.table are excluded.

2019-03-24  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui_display.c:
	  - KMOD_GUI => CommandMask in get_mod_state().
	  - SDL_KEYDOWN event in poll_event() calls ui_window_receive_event()
	    if state is CommandMask.

	* sdl2/ui.h: CommandMask is added.

	* ui_display_freebsd.c: All 8 bits of keymap.key[code].spcl are checked.

	* servman/Makefile.in, libotl/Makefile.in, libtype/Makefile.in:
	  INSTALL_OPT is removed.

2019-03-23  Araki Ken  <arakiken@users.sf.net>

	* Androkd.mk: Compiling error is fixed.

	* main.c: main_loop_final() is always called at exit.

	* bl_config.h.in: '#undef HAVE_STDINT_H' is added.

	* baselib/configure.in: The existence of stdlib.h is checked.

2019-03-22  Araki Ken  <arakiken@users.sf.net>
